style.css
html {
    height: 100%;
  }

body {
  min-height: 100%;
}

button {
  border-radius: 15px;
  width: 52px;
}

h2 {
  margin: 5px 0 0 0;
  align-items: flex-start;
  justify-content: flex-start;
  font-size: 30px;
  font-weight: bolder;
  font-style: italic;
  text-shadow: 1px 1px 2px black;
}

p {
  display: flex;
  margin: 0;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

#calculator-grid {
  display: flex;
  justify-content: center;
  align-content: center;
  padding-bottom: 15px;
  border-style: solid;
  border-radius: 15px;
  width: 300px;
}

#visor {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  flex-wrap: wrap;
  border-style: solid;
  border-radius: 10px;
  padding: 30px;
  margin-top: 10px;
  width: 200px;
  height: 50px;
}

.button-grid {
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  width: 280px;

}

#top-buttons {
  justify-content: end;
  margin-right: 20px;
}

#middle-buttons {
  justify-content: center;
}

#bottom-buttons {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

#number-grid > .big-buttons {
  margin: 0 0 10px 0px;
  width: 157px;
}

#operator-grid > .big-buttons {
  width: 108px;
}

